--- a/css/style.css
+++ b/css/style.css
@@ -304,7 +304,7 @@ li {
 }
 
 .service-area .services-caption .service-icon::before {
-  background-image: url(dot-bg.png);
+  background-image: url('../img/dot-bg.png');
   content: "";
   width: 80px;
   height: 135px;
@@ -416,7 +416,7 @@ li {
 }
 
 .pricing-card-area .single-card::before {
-  background-image: url(card_dot.png);
+  background-image: url('../img/card_dot.png');
   content: "";
   width: 171px;
   height: 134px;
