--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: Poppins,sans-serif;
+  font-family: Poppins, sans-serif;
   font-weight: 400;
   font-style: normal;
 }
@@ -21,6 +21,7 @@ body {
   letter-spacing: -2px;
   font-size: 5vw;
 }
+
 @media only screen and (max-width: 700px) {
   .title-main {
     font-size: 7vw;
@@ -32,6 +33,7 @@ body {
   position: absolute;
   right: -10%;
 }
+
 @media only screen and (max-width: 700px) {
   .example {
     display: none;
@@ -39,8 +41,13 @@ body {
 }
 
 
-h1,h2,h3,h4,h5,h6 {
-  font-family: Roboto,sans-serif;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: Roboto, sans-serif;
   color: #2b044d;
   margin-top: 0;
   font-style: normal;
@@ -58,11 +65,11 @@ p {
 }
 
 a {
-  -webkit-transition: all .3s ease-out 0s;
-  -moz-transition: all .3s ease-out 0s;
-  -ms-transition: all .3s ease-out 0s;
-  -o-transition: all .3s ease-out 0s;
-  transition: all .3s ease-out 0s;
+  -webkit-transition: all 0.3s ease-out 0s;
+  -moz-transition: all 0.3s ease-out 0s;
+  -ms-transition: all 0.3s ease-out 0s;
+  -o-transition: all 0.3s ease-out 0s;
+  transition: all 0.3s ease-out 0s;
 }
 
 a:focus {
@@ -78,7 +85,8 @@ a:hover {
   color: #fff;
 }
 
-a:focus,a:hover {
+a:focus,
+a:hover {
   text-decoration: none;
 }
 
@@ -87,7 +95,12 @@ a {
   outline: medium none;
 }
 
-h1 a,h2 a,h3 a,h4 a,h5 a,h6 a {
+h1 a,
+h2 a,
+h3 a,
+h4 a,
+h5 a,
+h6 a {
   color: inherit;
 }
 
@@ -109,13 +122,13 @@ li {
   margin-bottom: 90px;
 }
 
-@media (max-width:767px) {
+@media (max-width: 767px) {
   .mb-90 {
     margin-bottom: 30px;
   }
 }
 
-@media (min-width:768px) and (max-width:991px) {
+@media (min-width: 768px) and (max-width: 991px) {
   .mb-90 {
     margin-bottom: 45px;
   }
@@ -151,13 +164,13 @@ li {
   top: 0;
   width: 100%;
   height: 100%;
-  background: #EF0D50;
+  background: #ef0d50;
   z-index: 1;
   border-radius: 5px;
-  transition: transform .5s;
+  transition: transform 0.5s;
   transition-timing-function: ease;
   transform-origin: 0 0;
-  transition-timing-function: cubic-bezier(.5,1.6,.4,.7);
+  transition-timing-function: cubic-bezier(0.5, 1.6, 0.4, 0.7);
   transform: scaleX(0);
 }
 
@@ -193,14 +206,14 @@ li {
   padding-bottom: 200px;
 }
 
-@media only screen and (min-width:768px) and (max-width:991px) {
+@media only screen and (min-width: 768px) and (max-width: 991px) {
   .section-padding2 {
     padding-top: 100px;
     padding-bottom: 100px;
   }
 }
 
-@media only screen and (max-width:767px) {
+@media only screen and (max-width: 767px) {
   .section-padding2 {
     padding-top: 50px;
     padding-bottom: 50px;
@@ -212,7 +225,7 @@ li {
   padding-bottom: 150px;
 }
 
-@media only screen and (min-width:992px) and (max-width:1199px) {
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
   .services-padding {
     padding-top: 200px;
     padding-bottom: 150px;
@@ -228,34 +241,36 @@ li {
 
 .best-pricing,
 .skewed {
-  background-image: -moz-linear-gradient(0deg,#f9218d 0,#6c19f6 100%);
-  background-image: -webkit-linear-gradient(0deg,#f9218d 0,#6c19f6 100%);
-  background-image: -ms-linear-gradient(0deg,#f9218d 0,#6c19f6 100%);
+  background-image: -moz-linear-gradient(0deg, #f9218d 0, #6c19f6 100%);
+  background-image: -webkit-gradient(0deg, #f9218d 0, #6c19f6 100%);
+  background-image: -webkit-linear-gradient(0deg, #f9218d 0, #6c19f6 100%);
+  background-image: -ms-linear-gradient(0deg, #f9218d 0, #6c19f6 100%);
+  background-image: -o-linear-gradient(0deg, #f9218d 0, #6c19f6 100%);
 }
 
 .services-area {
   padding-top: 270px;
 }
 
-@media only screen and (min-width:992px) and (max-width:1199px) {
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
   .services-area {
     padding-top: 200px;
   }
 }
 
-@media only screen and (min-width:768px) and (max-width:991px) {
+@media only screen and (min-width: 768px) and (max-width: 991px) {
   .services-area {
     padding-top: 150px;
   }
 }
 
-@media only screen and (min-width:576px) and (max-width:767px) {
+@media only screen and (min-width: 576px) and (max-width: 767px) {
   .services-area {
     padding-top: 150px;
   }
 }
 
-@media (max-width:767px) {
+@media (max-width: 767px) {
   .services-area {
     padding-top: 130px;
   }
@@ -268,14 +283,14 @@ li {
   margin-bottom: 90px;
 }
 
-@media (max-width:767px) {
+@media (max-width: 767px) {
   .section-title h2 {
     font-size: 30px;
     line-height: 1.3;
   }
 }
 
-@media only screen and (min-width:992px) and (max-width:1199px) {
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
   .section-title h2 {
     font-size: 40px;
   }
@@ -286,13 +301,13 @@ li {
   padding: 84px 45px 56px;
   border: 1px solid transparent;
   border-radius: 7px;
-  -webkit-transition: .5s;
-  -moz-transition: .5s;
-  -o-transition: .5s;
-  transition: .5s;
+  -webkit-transition: 0.5s;
+  -moz-transition: 0.5s;
+  -o-transition: 0.5s;
+  transition: 0.5s;
 }
 
-@media only screen and (min-width:992px) and (max-width:1199px) {
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
   .service-area .services-caption {
     padding: 84px 25px 56px;
   }
@@ -334,6 +349,16 @@ li {
   -moz-transition: .5s;
   -o-transition: .5s;
   transition: .5s;
+}
+
+.footer-area .footer-title ul li a {
+  color: #868c98;
+  font-weight: 300;
+}
+
+.footer-area .footer-title ul li a:hover {
+  color: #8f1bdc;
+  padding-left: 5px;
 }
 
 .service-area .services-caption .service-cap h4 a {
@@ -408,11 +433,11 @@ li {
   background: #fff;
   padding: 40px 25px;
   border-radius: 6px;
-  box-shadow: 0 0 9px 0 rgba(131,93,248,.07);
-  -webkit-transition: .4s;
-  -moz-transition: .4s;
-  -o-transition: .4s;
-  transition: .4s;
+  box-shadow: 0 0 9px 0 rgba(131, 93, 248, 0.07);
+  -webkit-transition: 0.4s;
+  -moz-transition: 0.4s;
+  -o-transition: 0.4s;
+  transition: 0.4s;
 }
 
 .pricing-card-area .single-card::before {
@@ -424,10 +449,10 @@ li {
   right: 2px;
   bottom: 2px;
   z-index: -1;
-  -webkit-transition: .4s;
-  -moz-transition: .4s;
-  -o-transition: .4s;
-  transition: .4s;
+  -webkit-transition: 0.4s;
+  -moz-transition: 0.4s;
+  -o-transition: 0.4s;
+  transition: 0.4s;
 }
 
 @media (max-width:767px) {
@@ -474,7 +499,7 @@ li {
 }
 
 .pricing-card-area .single-card.active {
-  box-shadow: 0 10px 30px 0 rgba(133,66,189,.1);
+  box-shadow: 0 10px 30px 0 rgba(133, 66, 189, 0.1);
 }
 
 .pricing-card-area .single-card.active::before {
@@ -489,7 +514,7 @@ li {
 }
 
 .pricing-card-area .single-card:hover {
-  box-shadow: 0 10px 30px 0 rgba(133,66,189,.1);
+  box-shadow: 0 10px 30px 0 rgba(133, 66, 189, 0.1);
 }
 
 .pricing-card-area .single-card:hover::before {
@@ -519,21 +544,11 @@ li {
   margin-bottom: 15px;
 }
 
-.footer-area .footer-title ul li a {
-  color: #868c98;
-  font-weight: 300;
-}
-
-.footer-area .footer-title ul li a:hover {
-  color: #8f1bdc;
-  padding-left: 5px;
-}
-
 .footer-area .footer-copy-right {
   padding-top: 20px;
 }
 
-@media (max-width:767px) {
+@media (max-width: 767px) {
   .footer-area .footer-copy-right {
     padding-top: 0;
   }
