--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,6 @@ body {
   }
 }
 
-
 h1,
 h2,
 h3,
@@ -56,7 +55,7 @@ h6 {
 }
 
 p {
-  font-family: Poppins,sans-serif;
+  font-family: Poppins, sans-serif;
   color: #707b8e;
   font-size: 16px;
   line-height: 30px;
@@ -70,28 +69,7 @@ a {
   -ms-transition: all 0.3s ease-out 0s;
   -o-transition: all 0.3s ease-out 0s;
   transition: all 0.3s ease-out 0s;
-}
-
-a:focus {
-  text-decoration: none;
-  outline: 0;
-}
-
-a {
   color: #635c5c;
-}
-
-a:hover {
-  color: #fff;
-}
-
-a:focus,
-a:hover {
-  text-decoration: none;
-}
-
-a {
-  color: #fff;
   outline: medium none;
 }
 
@@ -102,6 +80,16 @@ h4 a,
 h5 a,
 h6 a {
   color: inherit;
+}
+
+a:focus {
+  text-decoration: none;
+  outline: 0;
+}
+
+a:hover {
+  color: #fff;
+  text-decoration: none;
 }
 
 ul {
@@ -139,7 +127,6 @@ li {
   -moz-user-select: none;
   text-transform: capitalize;
   color: #fff;
-  cursor: pointer;
   display: inline-block;
   font-size: 16px;
   font-weight: 400;
@@ -149,7 +136,7 @@ li {
   padding: 30px 44px;
   border-radius: 5px;
   cursor: pointer;
-  transition: color .4s linear;
+  transition: color 0.4s linear;
   position: relative;
   z-index: 1;
   border: 0;
@@ -168,7 +155,6 @@ li {
   z-index: 1;
   border-radius: 5px;
   transition: transform 0.5s;
-  transition-timing-function: ease;
   transform-origin: 0 0;
   transition-timing-function: cubic-bezier(0.5, 1.6, 0.4, 0.7);
   transform: scaleX(0);
@@ -232,7 +218,7 @@ li {
   }
 }
 
-@media only screen and (max-width:991px) {
+@media only screen and (max-width: 991px) {
   .services-padding {
     padding-top: 150px;
     padding-bottom: 70px;
@@ -327,10 +313,10 @@ li {
   right: -29px;
   top: -35px;
   z-index: 0;
-  -webkit-transition: .5s;
-  -moz-transition: .5s;
-  -o-transition: .5s;
-  transition: .5s;
+  -webkit-transition: 0.5s;
+  -moz-transition: 0.5s;
+  -o-transition: 0.5s;
+  transition: 0.5s;
 }
 
 .service-area .services-caption .service-icon span {
@@ -351,14 +337,17 @@ li {
   transition: .5s;
 }
 
+.footer-area .footer-copy-right p a {
+  color: #f9218d;
+}
+
+.footer-area .footer-copy-right p a:hover {
+  color: #8f1bdc;
+}
+
 .footer-area .footer-title ul li a {
   color: #868c98;
   font-weight: 300;
-}
-
-.footer-area .footer-title ul li a:hover {
-  color: #8f1bdc;
-  padding-left: 5px;
 }
 
 .service-area .services-caption .service-cap h4 a {
@@ -367,6 +356,11 @@ li {
   line-height: 1.2;
   margin-bottom: 27px;
   display: inline-block;
+}
+
+.footer-area .footer-title ul li a:hover {
+  color: #8f1bdc;
+  padding-left: 5px;
 }
 
 .service-area .services-caption .service-cap h4 a:hover {
@@ -417,7 +411,7 @@ li {
   top: 0;
   bottom: 0;
   content: "";
-  opacity: .95;
+  opacity: 0.95;
 }
 
 .best-pricing.best-pricing2::before {
@@ -455,7 +449,7 @@ li {
   transition: 0.4s;
 }
 
-@media (max-width:767px) {
+@media (max-width: 767px) {
   .pricing-card-area .single-card::before {
     display: none;
   }
@@ -485,6 +479,11 @@ li {
 .pricing-card-area .single-card .card-top h4 span {
   color: #6a56a6;
   font-size: 16px;
+}
+
+.footer-area .footer-title ul li {
+  color: #012f5f;
+  margin-bottom: 15px;
 }
 
 .pricing-card-area .single-card .card-bottom ul li {
@@ -539,11 +538,6 @@ li {
   font-weight: 700;
 }
 
-.footer-area .footer-title ul li {
-  color: #012f5f;
-  margin-bottom: 15px;
-}
-
 .footer-area .footer-copy-right {
   padding-top: 20px;
 }
@@ -560,12 +554,4 @@ li {
   font-size: 16px;
   line-height: 2;
   margin-bottom: 12px;
-}
-
-.footer-area .footer-copy-right p a {
-  color: #f9218d;
-}
-
-.footer-area .footer-copy-right p a:hover {
-  color: #8f1bdc;
 }
