--- a/css/style.css
+++ b/css/style.css
@@ -22,9 +22,15 @@ body {
   font-size: 5vw;
 }
 
-@media only screen and (max-width: 700px) {
+@media only screen and (min-width: 401px) and (max-width: 700px) {
   .title-main {
-    font-size: 7vw;
+    font-size: 10vw;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  .title-main {
+    font-size: 12vw;
   }
 }
 
