--- a/css/style.css
+++ b/css/style.css
@@ -232,11 +232,40 @@ li {
 
 .best-pricing,
 .skewed {
-  background-image: -moz-linear-gradient(0deg, #f9218d 0, #6c19f6 100%);
-  background-image: -webkit-gradient(0deg, #f9218d 0, #6c19f6 100%);
-  background-image: -webkit-linear-gradient(0deg, #f9218d 0, #6c19f6 100%);
-  background-image: -ms-linear-gradient(0deg, #f9218d 0, #6c19f6 100%);
-  background-image: -o-linear-gradient(0deg, #f9218d 0, #6c19f6 100%);
+  background-image: -moz-linear-gradient(60deg, #f9218d 0, #6c19f6 100%);
+  background-image: -webkit-gradient(60deg, #f9218d 0, #6c19f6 100%);
+  background-image: -webkit-linear-gradient(60deg, #f9218d 0, #6c19f6 100%);
+  background-image: -ms-linear-gradient(60deg, #f9218d 0, #6c19f6 100%);
+  background-image: -o-linear-gradient(60deg, #f9218d 0, #6c19f6 100%);
+  background-size: 200% 200%;
+  -webkit-animation: gradient-animation 10s ease infinite;
+  -moz-animation: gradient-animation 10s ease infinite;
+  -o-animation: gradient-animation 10s ease infinite;
+  animation: gradient-animation 10s ease infinite;
+}
+
+@-webkit-keyframes gradient-animation {
+    0% { background-position: 0% 50% }
+    50% { background-position: 100% 50% }
+    100% { background-position: 0% 50% }
+}
+
+@-moz-keyframes gradient-animation {
+    0% { background-position: 0% 50% }
+    50% { background-position: 100% 50% }
+    100% { background-position: 0% 50% }
+}
+
+@-o-keyframes gradient-animation {
+    0% { background-position: 0% 50% }
+    50% { background-position: 100% 50% }
+    100% { background-position: 0% 50% }
+}
+
+@keyframes gradient-animation {
+    0% { background-position: 0% 50% }
+    50% { background-position: 100% 50% }
+    100% { background-position: 0% 50% }
 }
 
 .services-area {
