--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,6 +2,8 @@ body {
   font-family: Poppins, sans-serif;
   font-weight: 400;
   font-style: normal;
+  background-color: #fff5f5;
+  overflow-x: hidden;
 }
 
 .skewed {
@@ -14,6 +16,14 @@ body {
   transform: skewY(-9deg);
   transform-origin: top left;
   z-index: -1;
+}
+
+.h-100vh {
+  height: 100vh;
+}
+
+.w-70vw {
+  width: 70vw;
 }
 
 .title-main {
