--- a/static/css/style.css
+++ b/static/css/style.css
@@ -255,27 +255,27 @@ li {
 }
 
 @-webkit-keyframes gradient-animation {
-    0% { background-position: 0% 50% }
-    50% { background-position: 100% 50% }
-    100% { background-position: 0% 50% }
+  0% { background-position: 0% 50%; }
+  50% { background-position: 100% 50%; }
+  100% { background-position: 0% 50%; }
 }
 
 @-moz-keyframes gradient-animation {
-    0% { background-position: 0% 50% }
-    50% { background-position: 100% 50% }
-    100% { background-position: 0% 50% }
+  0% { background-position: 0% 50%; }
+  50% { background-position: 100% 50%; }
+  100% { background-position: 0% 50%; }
 }
 
 @-o-keyframes gradient-animation {
-    0% { background-position: 0% 50% }
-    50% { background-position: 100% 50% }
-    100% { background-position: 0% 50% }
+  0% { background-position: 0% 50%; }
+  50% { background-position: 100% 50%; }
+  100% { background-position: 0% 50%; }
 }
 
 @keyframes gradient-animation {
-    0% { background-position: 0% 50% }
-    50% { background-position: 100% 50% }
-    100% { background-position: 0% 50% }
+  0% { background-position: 0% 50%; }
+  50% { background-position: 100% 50%; }
+  100% { background-position: 0% 50%; }
 }
 
 .services-area {
@@ -386,14 +386,14 @@ li {
   color: #f9218d;
 }
 
-.footer-area .footer-copy-right p a:hover,
-.single-card .card-bottom p a:hover {
-  color: #8f1bdc;
-}
-
 .footer-area .footer-title ul li a {
   color: #868c98;
   font-weight: 300;
+}
+
+.footer-area .footer-copy-right p a:hover,
+.single-card .card-bottom p a:hover {
+  color: #8f1bdc;
 }
 
 .service-area .services-caption .service-cap h4 a {
