--- a/static/css/style.css
+++ b/static/css/style.css
@@ -608,3 +608,27 @@ li {
   line-height: 2;
   margin-bottom: 12px;
 }
+
+iframe {
+  padding: 7px;
+  margin: 5px;
+  border-radius: 20px;
+  background-color: #000;
+  box-shadow: 0px 0px 21px -2px rgba(0,0,0,0.22);
+  -webkit-box-shadow: 0px 0px 21px -2px rgba(0,0,0,0.22);
+  -moz-box-shadow: 0px 0px 21px -2px rgba(0,0,0,0.22);
+  -webkit-transition: 0.4s;
+  -moz-transition: 0.4s;
+  -o-transition: 0.4s;
+  transition: 0.4s;
+}
+
+iframe:hover {
+  box-shadow: 7px 7px 21px -2px rgba(0,0,0,0.52);
+  -webkit-box-shadow: 7px 7px 21px -2px rgba(0,0,0,0.52);
+  -moz-box-shadow: 7px 7px 21px -2px rgba(0,0,0,0.52);
+  -webkit-transition: 0.4s;
+  -moz-transition: 0.4s;
+  -o-transition: 0.4s;
+  transition: 0.4s;
+}
